[gd_scene load_steps=18 format=3 uid="uid://dqlr43i6g1a2i"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_pq7b4"]
[ext_resource type="Texture2D" uid="uid://btqyxn0x6gwx1" path="res://Sprites/AngryTree.png" id="2_r1h28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tybad"]
size = Vector2(64, 125)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ivs0w"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t4srk"]
particle_flag_disable_z = true
inherit_velocity_ratio = 1.0
spread = 180.0
radial_velocity_min = -364.71
radial_velocity_max = 321.54
gravity = Vector3(0, 98, 0)
scale_min = 0.0
scale_max = 14.39
scale_over_velocity_max = 561.15
color = Color(0, 0.729412, 1, 1)
anim_speed_max = 1.73
turbulence_noise_strength = 20.0
turbulence_noise_scale = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa6nr"]
size = Vector2(81, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gevv"]
size = Vector2(44, 87)

[sub_resource type="Animation" id="Animation_4glm1"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}

[sub_resource type="Animation" id="Animation_37o78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r6xpi"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_db2xy"]
_data = {
"Attack": SubResource("Animation_4glm1"),
"RESET": SubResource("Animation_37o78"),
"Walk": SubResource("Animation_r6xpi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u72qk"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mpwim"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ed1c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kji2x"]
advance_mode = 2
advance_condition = &"Attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m60v7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_du27l"]
states/Attack/node = SubResource("AnimationNodeAnimation_u72qk")
states/Attack/position = Vector2(318, 180)
states/Walk/node = SubResource("AnimationNodeAnimation_mpwim")
states/Walk/position = Vector2(318, 80)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_2ed1c"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_kji2x"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_m60v7")]

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
script = ExtResource("1_pq7b4")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(-32, 1)
scale = Vector2(4, 4)
texture = ExtResource("2_r1h28")
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_tybad")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_ivs0w")
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_t4srk")
lifetime = 0.5
one_shot = true
explosiveness = 0.58
trail_lifetime = 0.1

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-76.5, 3)
shape = SubResource("RectangleShape2D_xa6nr")

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2(-61, 17.5)
shape = SubResource("RectangleShape2D_6gevv")
debug_color = Color(1, 0, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_db2xy")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_du27l")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Attack = false

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_attack_detector_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
